--- a/index.html
+++ b/index.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="vendors/css/normalize.css" />
-    <link rel="stylesheet" href="vendors/css/grid.css" />
-    <link rel="stylesheet" href="resources/css/style.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap"
-      rel="stylesheet"
-    />
-    <title>Omnifood</title>
-  </head>
 
-  <body>
-    <header>
-      <div class="hero-tex-box">
-        <h1>
-          Goodbye junk food.<br />
-          Hello super healthy meals
-        </h1>
-        <a class=" btn one" href="#">I am hungry</a>
-        <a class=" btn two" href="#">Show me more</a>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="vendors/css/normalize.css" />
+  <link rel="stylesheet" href="vendors/css/grid.css" />
+  <link rel="stylesheet" href="resources/css/style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap" rel="stylesheet" />
+  <title>Omnifood</title>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <div class="row">
+        <img src="resources/img/logo-white.png" alt="omnifood logo" class="logo">
+        <ul class="main-nav">
+          <li><a href="#">Food delivery</a></li>
+          <li><a href="#">How it works</a></li>
+          <li><a href="#">Our cities</a></li>
+          <li><a href="#">Sign up</a></li>
+
+        </ul>
       </div>
-    </header>
-  </body>
+    </nav>
+    <div class="hero-tex-box">
+      <h1>
+        Goodbye junk food.<br />
+        Hello super healthy meals
+      </h1>
+      <a class=" btn one" href="#">I am hungry</a>
+      <a class=" btn two" href="#">Show me more</a>
+    </div>
+  </header>
+</body>
+
 </html>
