--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="vendors/css/normalize.css" />
   <link rel="stylesheet" href="vendors/css/grid.css" />
   <link rel="stylesheet" href="resources/css/style.css" />
+  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap" rel="stylesheet" />
   <title>Omnifood</title>
 </head>
@@ -35,6 +36,51 @@
       <a class=" btn two" href="#">Show me more</a>
     </div>
   </header>
+  <section class="section-features">
+    <div class="row">
+      <h2>Get food fast &mdash;not fast food</h2>
+      <p class="long-copy">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Labore aut beatae ipsa ex ut vel, quaerat quo consequatur,
+        ipsum expedita, facilis ipsam dolorum nostrum?
+        Quo et tenetur officiis exercitationem corrupti.
+      </p>
+    </div>
+    <div class="row">
+      <div class="col span-1-of-4">
+        <i class="fas fa-balance-scale"></i>
+        <h3>Up to 365 days</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+          Voluptas dolore ipsam in consequatur molestiae
+          quasi voluptatem corrupti odio laboriosam dicta explicabo facere expedita possimus sint,
+          porro aspernatur nostrum maxime dignissimos.</p>
+      </div>
+      <div class="col span-1-of-4">
+        <i class="fas fa-stopwatch"></i>
+        <h3>Ready in 20 minutes</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+          Voluptas dolore ipsam in consequatur molestiae
+          quasi voluptatem corrupti odio laboriosam dicta explicabo facere expedita possimus sint,
+          porro aspernatur nostrum maxime dignissimos.</p>
+      </div>
+      <div class="col span-1-of-4">
+        <i class="fab fa-nutritionix"></i>
+        <h3>100 % organic</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+          Voluptas dolore ipsam in consequatur molestiae
+          quasi voluptatem corrupti odio laboriosam dicta explicabo facere expedita possimus sint,
+          porro aspernatur nostrum maxime dignissimos.</p>
+      </div>
+      <div class="col span-1-of-4">
+        <i class="fas fa-shopping-cart"></i>
+        <h3>Order anything</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+          Voluptas dolore ipsam in consequatur molestiae
+          quasi voluptatem corrupti odio laboriosam dicta explicabo facere expedita possimus sint,
+          porro aspernatur nostrum maxime dignissimos.</p>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
