--- a/index.html
+++ b/index.html
@@ -1,86 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="vendors/css/normalize.css" />
+    <link rel="stylesheet" href="vendors/css/grid.css" />
+    <link rel="stylesheet" href="resources/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="//use.fontawesome.com/releases/v5.0.7/css/all.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap"
+      rel="stylesheet"
+    />
+    <title>Omnifood</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="vendors/css/normalize.css" />
-  <link rel="stylesheet" href="vendors/css/grid.css" />
-  <link rel="stylesheet" href="resources/css/style.css" />
-  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap" rel="stylesheet" />
-  <title>Omnifood</title>
-</head>
-
-<body>
-  <header>
-    <nav>
+  <body>
+    <header>
+      <nav>
+        <div class="row">
+          <img
+            src="resources/img/logo-white.png"
+            alt="omnifood logo"
+            class="logo"
+          />
+          <ul class="main-nav">
+            <li><a href="#">Food delivery</a></li>
+            <li><a href="#">How it works</a></li>
+            <li><a href="#">Our cities</a></li>
+            <li><a href="#">Sign up</a></li>
+          </ul>
+        </div>
+      </nav>
+      <div class="hero-tex-box">
+        <h1>
+          Goodbye junk food.<br />
+          Hello super healthy meals
+        </h1>
+        <a class=" btn one" href="#">I am hungry</a>
+        <a class=" btn two" href="#">Show me more</a>
+      </div>
+    </header>
+    <section class="section-features">
       <div class="row">
-        <img src="resources/img/logo-white.png" alt="omnifood logo" class="logo">
-        <ul class="main-nav">
-          <li><a href="#">Food delivery</a></li>
-          <li><a href="#">How it works</a></li>
-          <li><a href="#">Our cities</a></li>
-          <li><a href="#">Sign up</a></li>
-
-        </ul>
+        <h2>Get food fast &mdash;not fast food</h2>
+        <p class="long-copy">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut
+          beatae ipsa ex ut vel, quaerat quo consequatur, ipsum expedita,
+          facilis ipsam dolorum nostrum? Quo et tenetur officiis exercitationem
+          corrupti.
+        </p>
       </div>
-    </nav>
-    <div class="hero-tex-box">
-      <h1>
-        Goodbye junk food.<br />
-        Hello super healthy meals
-      </h1>
-      <a class=" btn one" href="#">I am hungry</a>
-      <a class=" btn two" href="#">Show me more</a>
-    </div>
-  </header>
-  <section class="section-features">
-    <div class="row">
-      <h2>Get food fast &mdash;not fast food</h2>
-      <p class="long-copy">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Labore aut beatae ipsa ex ut vel, quaerat quo consequatur,
-        ipsum expedita, facilis ipsam dolorum nostrum?
-        Quo et tenetur officiis exercitationem corrupti.
-      </p>
-    </div>
-    <div class="row">
-      <div class="col span-1-of-4">
-        <i class="fas fa-balance-scale"></i>
-        <h3>Up to 365 days</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-          Voluptas dolore ipsam in consequatur molestiae
-          quasi voluptatem corrupti odio laboriosam dicta explicabo facere expedita possimus sint,
-          porro aspernatur nostrum maxime dignissimos.</p>
+      <div class="row">
+        <div class="col span-1-of-4">
+          <i class="fas fa-balance-scale icon-big"></i>
+          <h3>Up to 365 days</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
+            dolore ipsam in consequatur molestiae quasi voluptatem corrupti odio
+            laboriosam dicta explicabo facere expedita possimus sint, porro
+            aspernatur nostrum maxime dignissimos.
+          </p>
+        </div>
+        <div class="col span-1-of-4">
+          <i class="fas fa-stopwatch icon-big"></i>
+          <h3>Ready in 20 minutes</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
+            dolore ipsam in consequatur molestiae quasi voluptatem corrupti odio
+            laboriosam dicta explicabo facere expedita possimus sint, porro
+            aspernatur nostrum maxime dignissimos.
+          </p>
+        </div>
+        <div class="col span-1-of-4">
+          <i class="fab fa-nutritionix icon-big"></i>
+          <h3>100 % organic</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
+            dolore ipsam in consequatur molestiae quasi voluptatem corrupti odio
+            laboriosam dicta explicabo facere expedita possimus sint, porro
+            aspernatur nostrum maxime dignissimos.
+          </p>
+        </div>
+        <div class="col span-1-of-4">
+          <i class="fas fa-shopping-cart icon-big"></i>
+          <h3>Order anything</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
+            dolore ipsam in consequatur molestiae quasi voluptatem corrupti odio
+            laboriosam dicta explicabo facere expedita possimus sint, porro
+            aspernatur nostrum maxime dignissimos.
+          </p>
+        </div>
       </div>
-      <div class="col span-1-of-4">
-        <i class="fas fa-stopwatch"></i>
-        <h3>Ready in 20 minutes</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-          Voluptas dolore ipsam in consequatur molestiae
-          quasi voluptatem corrupti odio laboriosam dicta explicabo facere expedita possimus sint,
-          porro aspernatur nostrum maxime dignissimos.</p>
-      </div>
-      <div class="col span-1-of-4">
-        <i class="fab fa-nutritionix"></i>
-        <h3>100 % organic</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-          Voluptas dolore ipsam in consequatur molestiae
-          quasi voluptatem corrupti odio laboriosam dicta explicabo facere expedita possimus sint,
-          porro aspernatur nostrum maxime dignissimos.</p>
-      </div>
-      <div class="col span-1-of-4">
-        <i class="fas fa-shopping-cart"></i>
-        <h3>Order anything</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-          Voluptas dolore ipsam in consequatur molestiae
-          quasi voluptatem corrupti odio laboriosam dicta explicabo facere expedita possimus sint,
-          porro aspernatur nostrum maxime dignissimos.</p>
-      </div>
-    </div>
-  </section>
-</body>
-
+    </section>
+    <section class="section-meals">
+      <ul class="meals-showcase">
+        <li>
+          <figure class="meal-photo">
+            <img src="resources/img/1.jpg" alt="" />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img src="resources/img/2.jpg" alt="" />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img src="resources/img/3.jpg" alt="" />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img src="resources/img/4.jpg" alt="" />
+          </figure>
+        </li>
+      </ul>
+      <ul class="meals-showcase">
+        <li>
+          <figure class="meal-photo">
+            <img src="resources/img/5.jpg" alt="" />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img src="resources/img/6.jpg" alt="" />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img src="resources/img/7.jpg" alt="" />
+          </figure>
+        </li>
+        <li>
+          <figure class="meal-photo">
+            <img src="resources/img/8.jpg" alt="" />
+          </figure>
+        </li>
+      </ul>
+    </section>
+  </body>
 </html>
