--- a/index.html
+++ b/index.html
@@ -48,10 +48,9 @@
       <div class="row">
         <h2>Get food fast &mdash;not fast food</h2>
         <p class="long-copy">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut
-          beatae ipsa ex ut vel, quaerat quo consequatur, ipsum expedita,
-          facilis ipsam dolorum nostrum? Quo et tenetur officiis exercitationem
-          corrupti.
+          Hello, we’re Omnifood, your new premium food delivery service. We know
+          you’re always busy. No time for cooking. So let us take care of that,
+          we’re really good at it, we promise!
         </p>
       </div>
       <div class="row">
@@ -59,46 +58,42 @@
           <i class="fas fa-balance-scale icon-big"></i>
           <h3>Up to 365 days</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
-            dolore ipsam in consequatur molestiae quasi voluptatem corrupti odio
-            laboriosam dicta explicabo facere expedita possimus sint, porro
-            aspernatur nostrum maxime dignissimos.
+            Never cook again! We really mean that. Our subscription plans
+            include up to 365 days/year coverage. You can also choose to order
+            more flexibly if that's your style.
           </p>
         </div>
         <div class="col span-1-of-4">
           <i class="fas fa-stopwatch icon-big"></i>
           <h3>Ready in 20 minutes</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
-            dolore ipsam in consequatur molestiae quasi voluptatem corrupti odio
-            laboriosam dicta explicabo facere expedita possimus sint, porro
-            aspernatur nostrum maxime dignissimos.
+            You're only twenty minutes away from your delicious and super
+            healthy meals delivered right to your home. We work with the best
+            chefs in each town to ensure that you're 100% happy.
           </p>
         </div>
         <div class="col span-1-of-4">
           <i class="fab fa-nutritionix icon-big"></i>
           <h3>100 % organic</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
-            dolore ipsam in consequatur molestiae quasi voluptatem corrupti odio
-            laboriosam dicta explicabo facere expedita possimus sint, porro
-            aspernatur nostrum maxime dignissimos.
+            All our vegetables are fresh, organic and local. Animals are raised
+            without added hormones or antibiotics. Good for your health, the
+            environment, and it also tastes better!
           </p>
         </div>
         <div class="col span-1-of-4">
           <i class="fas fa-shopping-cart icon-big"></i>
           <h3>Order anything</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas
-            dolore ipsam in consequatur molestiae quasi voluptatem corrupti odio
-            laboriosam dicta explicabo facere expedita possimus sint, porro
-            aspernatur nostrum maxime dignissimos.
+            We don't limit your creativity, which means you can order whatever
+            you feel like. You can also choose from our menu containing over 100
+            delicious meals. It's up to you!
           </p>
         </div>
       </div>
     </section>
     <section class="section-meals">
-      <ul class="meals-showcase">
+      <ul class="meals-showcase clearfix">
         <li>
           <figure class="meal-photo">
             <img src="resources/img/1.jpg" alt="" />
@@ -120,7 +115,7 @@
           </figure>
         </li>
       </ul>
-      <ul class="meals-showcase">
+      <ul class="meals-showcase clearfix">
         <li>
           <figure class="meal-photo">
             <img src="resources/img/5.jpg" alt="" />
@@ -143,5 +138,53 @@
         </li>
       </ul>
     </section>
+    <!-- ///////////////////////////////////////////////////////// -->
+    <section class="section-steps">
+      <div class="row">
+        <h2>
+          how it works &mdash; Simple as 1,2,3
+        </h2>
+      </div>
+      <div class="row">
+        <div class="col span-1-of-2 steps-box">
+          <img src="resources/img/app-iPhone.png" alt="" class="app-screen" />
+        </div>
+        <div class="col span-1-of-2 steps-box">
+          <div class="works-step">
+            <div>1</div>
+            <p>
+              Choose the subscription plan that best fits your needs and sign up
+              today.
+            </p>
+          </div>
+          <div class="works-step">
+            <div>2</div>
+            <p>
+              Order your delicious meal using our mobile app or website. Or you
+              can even call us!
+            </p>
+          </div>
+          <div class="works-step">
+            <div>3</div>
+            <p>
+              Enjoy your meal after less than 20 minutes. See you the next time!
+            </p>
+          </div>
+          <a href="#" class="btn-app"
+            ><img src="resources/img/download-app.svg" alt=""
+          /></a>
+          <a href="#" class="btn-app"
+            ><img src="resources/img/download-app-android.png" alt=""
+          /></a>
+        </div>
+      </div>
+    </section>
+    <section class="section-cities">
+      <div class="row">
+        <h2>
+          We are currently in these cities 
+        </h2>
+      </div>
+      <section>
   </body>
 </html>
