--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
 
   <body>
     <header>
-      <nav>
+      <nav class="sticky">
         <div class="row">
           <img
             src="resources/img/logo-white.png"
             alt="omnifood logo"
             class="logo"
           />
+          <img src="resources/img/logo.png" alt="omnifood logo" class="logo-black" />
           <ul class="main-nav">
             <li><a href="#">Food delivery</a></li>
             <li><a href="#">How it works</a></li>
@@ -428,4 +429,7 @@ Now that I got used to it, I couldn't live without my daily meals!
           </div>
         </footer>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/respond@0.9.0/main.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/selectivizr@1.0.3/selectivizr.min.js"></script>
 </html>
